--- a/package.json
+++ b/package.json
@@ -16,25 +16,25 @@
     "start": "webpack serve --mode development --open"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^10.2.4",
-    "eslint": "^8.13.0",
-    "eslint-config-htmlacademy": "^5.1.2",
-    "webpack": "^5.72.0",
-    "webpack-cli": "4.9.2",
+    "copy-webpack-plugin": "10.2.4",
+    "eslint": "8.13.0",
+    "eslint-config-htmlacademy": "5.1.2",
+    "webpack": "5.72.0",
+    "webpack-cli": "4.10.0",
     "webpack-dev-server": "4.8.1"
   },
   "engines": {
     "node": "16"
   },
   "dependencies": {
-    "@babel/core": "^7.17.9",
-    "@babel/preset-env": "^7.16.11",
-    "babel-loader": "^8.2.4",
-    "css-loader": "^6.7.1",
-    "dayjs": "^1.11.1",
-    "flatpickr": "^4.6.13",
-    "he": "^1.2.0",
-    "style-loader": "^3.3.1",
-    "webpack-dev-server": "^4.8.1"
+    "@babel/core": "7.17.9",
+    "@babel/preset-env": "7.16.11",
+    "babel-loader": "8.2.4",
+    "css-loader": "6.7.1",
+    "dayjs": "1.11.1",
+    "flatpickr": "4.6.13",
+    "he": "1.2.0",
+    "style-loader": "3.3.1",
+    "webpack-dev-server": "4.8.1"
   }
 }
